--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="images/chef.jpeg" alt="Picture of a chef cooking">
+    <h2>Odin Knows Good Food</h2>
     <p>
-        Odin <strong>LOVES</strong> to eat. These are his absolute favorite recipes. Give them a try!
+        These are his <strong>favorite</strong> recipes. Give them a try!
     </p>
-    <a href="recipes/irish-soda-bread.html">Iris Soda Bread</a>
+    <ul>
+        <li><a href="recipes/irish-soda-bread.html">Iris Soda Bread</a></li>
+        <li><a href="recipes/buffalo-chicken-wings.html">Buffalo Chicken Wings</a></li>
+        <li><a href="recipes/monster-cookie-pancakes.html">Monster Cookie Pancakes</a></li>
+    </ul>
 </body>
 </html>
