--- a/recipes/irish-soda-bread.html
+++ b/recipes/irish-soda-bread.html
@@ -11,10 +11,10 @@
     <img src="../images/irishsodabread.jpeg" alt="Picture of Irish Soda Bread">
     <h2>Description</h2>
     <p>
-        A delicious tasting sweet break. 
+        A delicious tasting sweet bread. 
     </p>
     <p>
-        Great for brekfast, desert, or even a snack!
+        Great for breakfast, desert, or even a snack!
     </p>
     <h2>Ingrediants</h2>
     <ul>
