buffalo-chicken-wings.html page completed;moster-cookie-pancakes.html page completed;irish-soda-bread.html ajusted for better design;monstercookiepancake and buffalowings picture added to picturs.

--- a/recipes/irish-soda-bread.html
+++ b/recipes/irish-soda-bread.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Irish Soda Bread</h1>
     <img src="../images/irishsodabread.jpeg" alt="Picture of Irish Soda Bread">
+    <br>
+    <a href="../index.html">Homepage</a>
     <h2>Description</h2>
     <p>
         A delicious tasting sweet bread. 
